fix GlobalExceptionHandler và FriendShipController