@@ -5,6 +5,9 @@ import com.example.user_server.dto.UserDTO;
 import com.example.user_server.entity.FriendShip;
 import com.example.user_server.entity.User;
 import com.example.user_server.exception.BusinessLogicException;
+import com.example.user_server.exception.ConflictException;
+import com.example.user_server.exception.ResourceNotFoundException;
+import com.example.user_server.exception.UnAuthorizedException;
 import com.example.user_server.mapper.impl.UserMapper;
 import com.example.user_server.repository.FriendShipRepository;
 import com.example.user_server.repository.UserRepository;
@@ -12,6 +15,7 @@ import com.example.user_server.service.AddFriendService;
 import com.example.user_server.utils.EmailUtils;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.ObjectUtils;
 
 import java.util.List;
@@ -29,15 +33,14 @@ public class AddFriendServiceImpl implements AddFriendService {
     public List<UserDTO> getSendingList() {
         String email = EmailUtils.getCurrentUser();
         if (ObjectUtils.isEmpty(email)) {
-            throw new BusinessLogicException();
+            throw new UnAuthorizedException();
         }
 
         List<FriendShip> friendShipList = friendShipRepository.findSendingList(email)
-                .orElseThrow(BusinessLogicException::new);
-        if (friendShipList.isEmpty()) throw new BusinessLogicException();
-
+                .orElse(null);
+        if (ObjectUtils.isEmpty(friendShipList)) return null;
         List<User> users = friendShipList.stream()
-                .map(friendShip -> friendShip.getAcceptFriend())
+                .map(FriendShip::getAcceptFriend)
                 .collect(Collectors.toList());
         return userMapper.toDTOList(users);
     }
@@ -46,16 +49,13 @@ public class AddFriendServiceImpl implements AddFriendService {
     public List<UserDTO> getRequestList() {
         String email = EmailUtils.getCurrentUser();
         if (ObjectUtils.isEmpty(email)) {
-            throw new BusinessLogicException();
+            throw new UnAuthorizedException();
         }
-
         List<FriendShip> friendShipList = friendShipRepository.findRequestList(email)
-                .orElseThrow(() -> new BusinessLogicException());
-        if (friendShipList.isEmpty()) throw new BusinessLogicException();
-
+                .orElse(null);
+        if (ObjectUtils.isEmpty(friendShipList)) return null;
         List<User> users = friendShipList.stream()
-                .map(friendShip -> friendShip.getSendFriend())
-
+                .map(FriendShip::getSendFriend)
                 .collect(Collectors.toList());
         return userMapper.toDTOList(users);
     }
@@ -64,96 +64,82 @@ public class AddFriendServiceImpl implements AddFriendService {
     public List<UserDTO> getFriendList() {
         String email = EmailUtils.getCurrentUser();
         if (ObjectUtils.isEmpty(email)) {
-            throw new BusinessLogicException();
+            throw new UnAuthorizedException();
         }
-
         List<FriendShip> friendShipList = friendShipRepository.findAllFriend(email)
-                .orElseThrow(() -> new BusinessLogicException());
-        if (friendShipList.isEmpty()) throw new BusinessLogicException();
-
+                .orElse(null);
+        if (ObjectUtils.isEmpty(friendShipList)) return null;
         List<User> users = friendShipList.stream()
                 .map(friendShip -> {
                     if (friendShip.getAcceptFriend().getEmail().equals(email)) {
                         return friendShip.getSendFriend();
                     } else return friendShip.getAcceptFriend();
                 })
-
                 .collect(Collectors.toList());
-
         return userMapper.toDTOList(users);
     }
 
+    @Transactional
     @Override
-    public boolean addFriend(long userId) {
+    public void addFriend(long userId) {
         String email = EmailUtils.getCurrentUser();
         if (ObjectUtils.isEmpty(email)) {
-            throw new BusinessLogicException();
+            throw new UnAuthorizedException();
         }
 
-        User sendUser = userRepository.findByEmail(email).orElseThrow(() -> new BusinessLogicException());
+        User sendUser = userRepository.findByEmail(email).orElseThrow(ResourceNotFoundException::new);
 
         // Lấy ra danh sách đã gửi lời mời cho mình
         List<FriendShip> friendShipList = friendShipRepository.findSendingListByUserId(userId)
-                .orElseThrow(() -> new BusinessLogicException());
+                .orElseThrow(ResourceNotFoundException::new);
         List<User> sendingUsers = friendShipList.stream()
-                .map(friendShip -> friendShip.getAcceptFriend())
-                .collect(Collectors.toList());
+                .map(FriendShip::getAcceptFriend)
+                .toList();
 
         if ((sendUser.getId() != userId) && (!sendingUsers.contains(sendUser))) {
-            User acceptUser = userRepository.findById(userId).orElseThrow(() -> new BusinessLogicException());
-
+            User acceptUser = userRepository.findById(userId).orElseThrow(ResourceNotFoundException::new);
             FriendShip friendShip = FriendShip.builder()
                     .sendFriend(sendUser)
                     .acceptFriend(acceptUser)
                     .status(FriendShipStatus.WAITING_ACCEPT)
                     .build();
-
             friendShipRepository.save(friendShip);
-
-            return true;
+            return;
         }
 
         if (sendingUsers.contains(sendUser)) {
-            FriendShip friendShip = friendShipRepository.findByAcceptedEmailAndSendingUserIdAndStatus(email, userId, FriendShipStatus.WAITING_ACCEPT).orElseThrow(() -> new BusinessLogicException());
-
-            if (ObjectUtils.isEmpty(friendShip)) {
-                throw new BusinessLogicException();
-            }
-
+            FriendShip friendShip = friendShipRepository.findByAcceptedEmailAndSendingUserIdAndStatus(email, userId, FriendShipStatus.WAITING_ACCEPT).orElseThrow(ResourceNotFoundException::new);
             friendShip.setStatus(FriendShipStatus.FRIEND);
             friendShipRepository.save(friendShip);
-
-            return true;
+            return;
         }
 
-        return false;
+        throw new ConflictException();
     }
 
+    @Transactional
     @Override
     public void acceptFriend(long userId) {
         String email = EmailUtils.getCurrentUser();
         if (ObjectUtils.isEmpty(email)) {
-            throw new BusinessLogicException();
+            throw new UnAuthorizedException();
         }
 
         FriendShip friendShip = friendShipRepository.findByAcceptedEmailAndSendingUserIdAndStatus(email, userId, FriendShipStatus.WAITING_ACCEPT)
-                .orElseThrow(() -> new BusinessLogicException());
-        if (ObjectUtils.isEmpty(friendShip)) {
-            throw new BusinessLogicException();
-        }
-
+                .orElseThrow(ResourceNotFoundException::new);
         friendShip.setStatus(FriendShipStatus.FRIEND);
         friendShipRepository.save(friendShip);
     }
 
+    @Transactional
     @Override
     public void cancelFriend(long userId) {
         String email = EmailUtils.getCurrentUser();
         if (ObjectUtils.isEmpty(email)) {
-            throw new BusinessLogicException();
+            throw new UnAuthorizedException();
         }
 
-        FriendShip friendShip = friendShipRepository.findFriendShipByEmailAndId(email, userId).orElseThrow(() -> new BusinessLogicException());
+        FriendShip friendShip = friendShipRepository.findFriendShipByEmailAndId(email, userId).orElseThrow(ResourceNotFoundException::new);
         friendShipRepository.delete(friendShip);
     }
 
